--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-car-ecommerce",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ogu89.github.io",
+  "homepage": "https://ogu89.github.io/React-Car-Ecommerce/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
